tests/rt/pos/ifc/tuples03.trp
import Missing
let val x = 42 raisedTo `<alice&bob;#root-integrity>`
    val y = 100 raisedTo `<alice&bob;#root-integrity>`

    val t = x
in case pdeclassify (t, authority, `{}`) of
      (_,_) =>  2
    | (_,_,_) => 3
    | (_ :: _ ) => 1
    | _ => 0
end
