tests/rt/neg/ifc/nm_password.trp
(* Example of non-malleable information flow in §2.1 in Cecchetti et al. CCS'17 *)
let val password = "cecchetti" raisedTo `<ethan; #root-integrity>`
    fun checkPassword (guess) = let (* val endorsed_guess = endorse(guess, authority, `<ethan; #root-integrity>`) *)
                                    val result = guess = password
                                in declassify(result, authority, `<; #root-integrity>`)
                                end
    fun deferred () = checkPassword password
in adv(deferred)
end